manifest/taks2/nginx-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-service
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
