manifest/taks2/nginx-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2-service
  namespace: default
spec:
  selector:
    app: nginx
    version: v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
